<resources>
    <string name="app_name">HIIT Chron</string>
    <string name="the_hiit_chronograph_text">The HIIT Chronograph</string>
    <string name="add_new_workout">Add New Workout</string>
    <string name="ACTIVE">ACTIVE</string>
    <string name="set_workout">Set Workout</string>
    <string name="select_minutes">min</string>
    <string name="select_seconds">sec</string>
    <string name="go">GO</string>
    <string name="duration_placeholder_text">Duration</string>
    <string name="type_placeholder_text">Type</string>
    <string name="workout_stage_icon">workout stage icon</string>
    <string name="secs_postfix">\" secs\"</string>
    <string name="save_workout_set">Save Set</string>
    <string name="workout">WORKOUT</string>
    <string name="relax">RELAX</string>
    <string name="save_your_workout">Save Your Workout</string>
    <string name="add_new_workout_btn">Add New Workout</string>
    <string name="start">Start</string>
    <string name="workout_radio_btn">WORKOUT</string>
    <string name="relax_radio_btn">RELAX</string>
</resources>