<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkoutSetupActivity">

    <LinearLayout
        android:id="@+id/workoutSetupLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutWorkoutStagesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/listWorkoutStages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingHorizontal="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioWorkout"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:text="@string/workout" />

                <RadioButton
                    android:id="@+id/radioRelax"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:text="@string/relax" />

            </RadioGroup>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_minutes"
                            android:textAlignment="center"/>

                        <NumberPicker
                            android:id="@+id/minutesPicker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_seconds"
                            android:textAlignment="center"/>

                        <NumberPicker
                            android:id="@+id/secondsPicker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">
            <ImageButton
                android:id="@+id/saveNewWorkoutSetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_save"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:contentDescription="@string/save_your_workout" />
            <ImageButton
                android:id="@+id/addNewWorkoutStageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_add"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                style="?android:attr/buttonBarButtonStyle"
                android:contentDescription="@string/add_new_workout_btn" />

            <ImageButton
                android:id="@+id/startWorkoutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_send"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/go_green"
                android:contentDescription="@string/start" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>